--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "check": "npm run lint && npm test",
-    "prepush": "npm run check"
+    "precommit": "npm run check",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
