--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,5 +4,7 @@ sonar.sources=.
 sonar.tests=__tests__
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov.info
-sonar.coverage.exclusions=**/*.test.js,**/node_modules/**,**/coverage/**
-sonar.qualitygate.wait=true 
+sonar.coverage.exclusions=**/*.test.js,**/node_modules/**,**/coverage/**,**/jest.config.js
+sonar.qualitygate.wait=true
+sonar.sourceEncoding=UTF-8
+sonar.javascript.version=20 
