ci: SonarCloudの設定を最適化（キャッシュの追加と除外パターンの改善）

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,7 +4,10 @@ sonar.sources=.
 sonar.tests=__tests__
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov.info
-sonar.coverage.exclusions=**/*.test.js,**/node_modules/**,**/coverage/**,**/jest.config.js
+sonar.coverage.exclusions=**/*.test.js,**/node_modules/**,**/coverage/**,**/jest.config.js,**/index.js
 sonar.qualitygate.wait=true
 sonar.sourceEncoding=UTF-8
-sonar.javascript.version=20 
+sonar.javascript.version=20
+sonar.exclusions=**/node_modules/**,**/coverage/**,**/.github/**
+sonar.issuesReport.html.enable=true
+sonar.analysis.mode=publish 
