--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -26,6 +26,13 @@ jobs:
       - name: Run tests with coverage
         run: npm run test:coverage
 
+      - name: Cache SonarCloud packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.sonar/cache
+          key: ${{ runner.os }}-sonar
+          restore-keys: ${{ runner.os }}-sonar
+
       - name: SonarCloud Scan
         uses: sonarsource/sonarcloud-github-action@master
         env:
