ci: SonarQubeの基本設定を追加

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,20 @@
 sonar.projectKey=miyakona_usako
 sonar.organization=miyakona
+
+# This is the name and version displayed in the SonarCloud UI.
+sonar.projectName=usako
+sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+sonar.sourceEncoding=UTF-8
 sonar.tests=__tests__
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=coverage/lcov-report/lcov.info
 sonar.coverage.exclusions=**/*.test.js,**/node_modules/**,**/coverage/**,**/jest.config.js,**/index.js
 sonar.qualitygate.wait=true
-sonar.sourceEncoding=UTF-8
 sonar.javascript.version=20
 sonar.exclusions=**/node_modules/**,**/coverage/**,**/.github/**
 sonar.issuesReport.html.enable=true
