--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,18 @@ Thumbs.db
 
 # Test coverage
 coverage/
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# GAS specific
+gas/.clasp.json
+gas/gas_backup/
+
+# CloudFlare Worker specific
+worker/.wrangler/
+worker/.cloudflare/
+worker/dist/
