--- a/package.json
+++ b/package.json
@@ -26,10 +26,16 @@
   },
   "homepage": "https://github.com/miyakona/usako#readme",
   "devDependencies": {
+    "@babel/core": "^7.26.9",
+    "@babel/preset-env": "^7.26.9",
+    "@babel/preset-typescript": "^7.26.0",
     "@google/clasp": "^2.4.2",
     "@types/jest": "^29.5.14",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "husky": "^9.1.7",
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.6",
+    "typescript": "^5.8.2"
   }
 }
