feat: D1データベースの統合とメッセージテーブルの作成
- wrangler.jsoncにD1データベースの設定を追加
- 新しいSQLiteデータベースファイルを作成し、メッセージテーブルを定義するSQLマイグレーションを追加
- server.tsにD1からランダムメッセージを取得する機能を実装し、POSTリクエストに対するレスポンスを更新

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,5 +2,12 @@
   "name": "usako",
   "compatibility_date": "2025-04-22",
   "main": "src/server.ts",
-  "compatibility_flags": ["nodejs_compat"]
+  "compatibility_flags": ["nodejs_compat"],
+  "d1_databases": [
+    {
+      "binding": "DB",
+      "database_name": "usako-messages",
+      "database_id": "your-database-id"
+    }
+  ]
 } 
