--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
     "@cucumber/cucumber": "^11.2.0",
     "@playwright/test": "^1.52.0",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.12",
     "@types/node": "^22.14.1",
+    "jest": "^29.7.0",
     "playwright": "^1.52.0",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "wrangler": "^4.12.0"
@@ -13,7 +16,9 @@
     "start": "ts-node src/server.ts",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
-    "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts"
+    "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts",
+    "test": "jest",
+    "test:unit": "jest tests/unit"
   },
   "dependencies": {
     "express": "^5.1.0"
