--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
     "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts",
-    "test": "jest",
-    "test:unit": "jest tests/unit"
+    "test:unit": "jest tests/unit",
+    "test:all": "npm run test:unit && npm run e2e",
+    "test": "npm run test:all"
   },
   "dependencies": {
     "express": "^5.1.0"
