--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@types/express": "^5.0.1",
     "@types/jest": "^29.5.12",
     "@types/node": "^22.14.1",
+    "@types/sqlite3": "^3.1.11",
     "jest": "^29.7.0",
     "playwright": "^1.52.0",
     "ts-jest": "^29.1.2",
@@ -13,7 +14,7 @@
     "wrangler": "^4.12.0"
   },
   "scripts": {
-    "start": "ts-node src/server.ts",
+    "start": "ts-node src/index.ts",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy",
     "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts",
@@ -22,6 +23,8 @@
     "test": "npm run test:all"
   },
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.7"
   }
 }
