package.jsonのデプロイコマンドを更新し、D1データベースのマイグレーション適用を追加。README.mdにデプロイ方法とデータベースマイグレーションの手順を明記。db.tsでCloudflare環境用のD1データベース作成関数を実装し、ローカル環境用のインターフェースを追加。server.tsにNode.js環境でのサーバー起動に関するコメントを追加。

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "ts-node src/index.ts",
     "dev": "wrangler dev",
-    "deploy": "wrangler deploy",
+    "deploy": "wrangler deploy && wrangler d1 migrations apply usako-messages --remote",
     "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts",
     "test:unit": "jest tests/unit",
     "test:all": "npm run test:unit && npm run e2e",
