--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -7,7 +7,7 @@
     {
       "binding": "DB",
       "database_name": "usako-messages",
-      "database_id": "your-database-id"
+      "database_id": "269d407d-c6d0-4c32-a0e0-51a3f1eba54e"
     }
   ]
 } 
