wrangler.jsoncにobservability設定を追加し、ログの有効化を行った。

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -9,5 +9,11 @@
       "database_name": "usako-messages",
       "database_id": "269d407d-c6d0-4c32-a0e0-51a3f1eba54e"
     }
-  ]
+  ],
+  "observability": {
+    "enabled": true,
+    "logs": {
+      "invocation_logs": true
+    }
+  }
 } 
