package.jsonにlintおよびlint:fixスクリプトを追加。handlers.tsでのログ出力を改善し、エラーハンドリングを強化。utils/http.tsとutils/error.tsを新規作成し、共通のHTTPレスポンス処理とエラーハンドリング機能を実装。logger.tsを追加し、統一されたロギング機能を提供。テストファイルでのモックを更新し、LINEメッセージ取得処理のテストを強化。

--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "e2e": "cucumber-js tests/e2e/features --require-module ts-node/register --require tests/e2e/step_definitions/**/*.ts --require tests/e2e/support/**/*.ts",
     "test:unit": "jest tests/unit",
     "test:all": "npm run test:unit && npm run e2e",
-    "test": "npm run test:all"
+    "test": "npm run test:all",
+    "lint": "tsc --noEmit",
+    "lint:fix": "tsc --noEmit && echo 'Type checking complete'"
   },
   "dependencies": {
     "express": "^5.1.0",
