--- a/wrangler.example.jsonc
+++ b/wrangler.example.jsonc
@@ -7,7 +7,7 @@
     {
       "binding": "DB",
       "database_name": "usako-messages",
-      "database_id": "${DATABASE_ID}"
+      "database_id": "${DATABASE_ID}" // Cloudflare D1データベースIDを設定
     }
   ],
   "observability": {
